Source/WebKit2/Shared/WebEvent.cpp
@@ -32,6 +32,13 @@
 
 namespace WebKit {
 
+WebEvent::WebEvent()
+    : m_type(static_cast<uint32_t>(NoType))
+    , m_modifiers(0)
+    , m_timestamp(0)
+{
+}
+
 WebEvent::WebEvent(Type type, Modifiers modifiers, double timestamp)
     : m_type(type)
     , m_modifiers(modifiers)
